AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = GCI GCI_ar GCI_isotool
GCI_SOURCES = src/GCI.cpp src/ISOhandler.cpp src/RegionFileParser.cpp src/CodeAssembler.cpp src/ObjdumpFileParser.cpp src/FileOperations.cpp
GCI_ar_SOURCES = src/GCI-ar.cpp src/FileOperations.cpp src/ObjdumpFileParser.cpp
GCI_isotool_SOURCES = src/GCI-isotool.cpp src/ISOhandler.cpp src/RegionFileParser.cpp
EXTRA_DIST = src/ISOhandler.h src/RegionFileParser.h src/CodeAssembler.h src/ObjdumpFileParser.h src/FileOperations.h
